--- a/views/users/changepassword.ejs
+++ b/views/users/changepassword.ejs
@@ -66,41 +66,12 @@
     <!-- /.container-fluid -->
 
     <script>
-        // Password and Confirmed passwords validation
-        let pwd = $('#password');
-        let confirmPwd = $('#confirm-password')
-        let matchingTxt = $('#.matching-txt')
-        let form = $('#form')
-        function comparePwd() {
-            if (confirmPwd.value) {
-                if (pwd.value != confirmPwd.value) {
-                    matchingTxt.style.display = 'block'
-                    matchingTxt.style.color = 'red'
-                    matchingTxt.innerHTML = 'Not Matching'
-                    return false
-                    e.preventDefault()
-                } else {
-                    matchingTxt.style.display = 'block'
-                    matchingTxt.style.color = 'green'
-                    matchingTxt.innerHTML = 'Matching'
-                }
-            } else {
-                matchingTxt.style.display = 'none'
-            }
-        }
-        confirmPwd.addEventListener('keyup', () => {
-            comparePwd()
-        })
-        pwd.addEventListener('keyup', () => {
-            comparePwd()
-        })
-
-        // $('#newpassword, #retypepassword').on('keyup', function () {
-        //     if ($('#newpassword').val() == $('#retypepassword').val()) {
-        //         $('#message').html('The password you entered is correct').css('color', 'green');
-        //     } else
-        //         $('#message').html('The password you entered does not match').css('color', 'red');
-        // });
+        $('#newpassword, #retypepassword').on('keyup', function () {
+            if ($('#newpassword').val() == $('#retypepassword').val()) {
+                $('#message').html('The password you entered is correct').css('color', 'green');
+            } else
+                $('#message').html('The password you entered does not match').css('color', 'red');
+        });
     </script>
 
     </div>
