repair code changepassword done

--- a/views/users/changepassword.ejs
+++ b/views/users/changepassword.ejs
@@ -19,7 +19,7 @@
 
                         <div class="card">
                             <form action="" method="post">
-                                <div class="card-header">
+                                <div class="carzd-header">
                                     <h6 class="m-0 font-weight-bold text-primary">Change Your Password</h6>
                                 </div>
 
@@ -75,6 +75,6 @@
     </script>
 
     </div>
-    < !--End of Main Content-->
+    <!--End of Main Content-->
 
-        <% - include('../partials/footer') %>
+    <%- include('../partials/footer') %>
