repair code changepasswords done

--- a/views/users/changepassword.ejs
+++ b/views/users/changepassword.ejs
@@ -19,7 +19,7 @@
 
                         <div class="card">
                             <form action="" method="post">
-                                <div class="carzd-header">
+                                <div class="card-header">
                                     <h6 class="m-0 font-weight-bold text-primary">Change Your Password</h6>
                                 </div>
 
