--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -61,7 +61,7 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
-            <% if(user.role==='Admin' ) { %>
+            <% if(user.role=='Admin' ) { %>
                 <li class="nav-item<%= path.startsWith('/dashboards') ? ' active' : '' %>">
                     <a class="nav-link" href="/dashboards">
                         <i class="fas fa-fw fa-tachometer-alt"></i>
@@ -78,7 +78,7 @@
                     </div>
 
                     <!-- Nav Item - Goods Utilities Collapse Menu -->
-                    <% if(user.role==='Admin' ) { %>
+                    <% if(user.role=='Admin' ) { %>
                         <li class="nav-item">
                             <a class="nav-link" href="" data-toggle="collapse" data-target="#collapseUtilities"
                                 aria-expanded="true" aria-controls="collapseUtilities">
@@ -115,7 +115,7 @@
                                 </a>
                             </li>
 
-                            <% if(user.role==='Admin' ) { %>
+                            <% if(user.role=='Admin' ) { %>
                                 <li class="nav-item<%= path.startsWith('/users') ? ' active' : '' %>">
                                     <a class="nav-link" href="/users" aria-expanded="true"
                                         aria-controls="collapseUsers">
@@ -214,87 +214,86 @@
                         </li>
 
                         <!-- Nav Item - Alerts -->
-                        <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle" href="" id="alertsDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-bell fa-fw"></i>
-                                <!-- Counter - Alerts -->
-                                <span class="badge badge-danger badge-counter">3+</span>
-                            </a>
-                            <!-- Dropdown - Alerts -->
-                            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="alertsDropdown">
-                                <h6 class="dropdown-header">
-                                    Alerts Center
-                                </h6>
-                                <a class="dropdown-item d-flex align-items-center" href="">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-primary">
-                                            <i class="fas fa-file-alt text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 12, 2019</div>
-                                        <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                                    </div>
+                            <li class="nav-item dropdown no-arrow mx-1">
+                                <a class="nav-link dropdown-toggle" href="" id="alertsDropdown" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fas fa-bell fa-fw"></i>
+                                    <!-- Counter - Alerts -->
+                                    <div id="count"></div>
                                 </a>
-                                <a class="dropdown-item d-flex align-items-center" href="">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-success">
-                                            <i class="fas fa-donate text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 7, 2019</div>
-                                        $290.29 has been deposited into your account!
-                                    </div>
-                                </a>
-                                <a class="dropdown-item d-flex align-items-center" href="">
-                                    <div class="mr-3">
-                                        <div class="icon-circle bg-warning">
-                                            <i class="fas fa-exclamation-triangle text-white"></i>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <div class="small text-gray-500">December 2, 2019</div>
-                                        Spending Alert: We've noticed unusually high spending for your account.
-                                    </div>
-                                </a>
-                                <a class="dropdown-item text-center small text-gray-500" href="">Show All Alerts</a>
-                            </div>
-                        </li>
+                                <!-- Dropdown - Alerts -->
+                                <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                                    aria-labelledby="alertsDropdown">
+                                    <h6 class="dropdown-header">
+                                        ALERTS CENTER
+                                    </h6>
+                                    <div id="alert"></div>
+                                </div>
+                            </li>
 
-                        <div class="topbar-divider d-none d-sm-block"></div>
+                            <div class="topbar-divider d-none d-sm-block"></div>
 
-                        <!-- Nav Item - User Information -->
-                        <li class="nav-item dropdown no-arrow">
-                            <a class="nav-link dropdown-toggle" href="" id="userDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">
-                                    <%= user.name %>
-                                </span>
-                                <img class="img-profile rounded-circle" src="/assets/img/undraw_profile.svg">
-                            </a>
-                            <!-- Dropdown - User Information -->
-                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                                aria-labelledby="userDropdown">
-                                <a class="dropdown-item" href="/users/profile">
-                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Profile
-                                </a>
-                                <a class="dropdown-item" href="/users/changepassword">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Change Password
-                                </a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/logout" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Logout
-                                </a>
-                            </div>
-                        </li>
+                                <!-- Nav Item - User Information -->
+                                <li class="nav-item dropdown no-arrow">
+                                    <a class="nav-link dropdown-toggle" href="" id="userDropdown" role="button"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <span class="mr-2 d-none d-lg-inline text-gray-600 small">
+                                            <%= user.name %>
+                                        </span>
+                                        <img class="img-profile rounded-circle" src="/assets/img/undraw_profile.svg">
+                                    </a>
+                                    <!-- Dropdown - User Information -->
+                                    <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
+                                        aria-labelledby="userDropdown">
+                                        <a class="dropdown-item" href="/users/profile">
+                                            <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                            Profile
+                                        </a>
+                                        <a class="dropdown-item" href="/users/changepassword">
+                                            <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
+                                            Change Password
+                                        </a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="/logout" data-toggle="modal"
+                                            data-target="#logoutModal">
+                                            <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                            Logout
+                                        </a>
+                                    </div>
+                                </li>
 
                     </ul>
 
                 </nav>
                 <!-- End of Topbar -->
+
+                <script>
+                    $.get({
+                        url: '/notification/alert'
+                    }).done((data) => {
+                        console.log(data)
+                        let html = ''
+                        data.forEach(item => {
+                            html += `
+                            <a href="/purchases" class="dropdown-item d-flex align-items-center" href="">
+                                    <i class="fas fa-exclamation-triangle bg-warning rounded-circle fa-1x px-2 py-2"></i>
+                                    <div class="col">
+                                        <div class="small text-gray-500">Barcode: ${item.barcode}</div>
+                                        <span>Stock Alert : </span><strong >${item.name}</strong>
+                                        <br>
+                                        <span>only have stock </span><strong > ${item.stock} pcs</strong>
+                                    
+                                    </div>
+                            </a>            
+                            `
+                        })
+                        $('#alert').html(html)
+                    })
+                    $.get({
+                        url: '/notification/count'
+                    }).done((data) => {
+                        console.log(data)
+                        let html = `<span class="badge badge-danger badge-counter">${data[0].count} </span>`
+                        $('#count').html(html)
+                    })
+                </script>
