--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -79,7 +79,7 @@
 
                     <!-- Nav Item - Goods Utilities Collapse Menu -->
                     <% if(user.role=='Admin' ) { %>
-                        <li class="nav-item">
+                        <li class="nav-item<%= title == 'POS Goods' || title == 'POS Units' ? ' active' : '' %>">
                             <a class="nav-link" href="" data-toggle="collapse" data-target="#collapseUtilities"
                                 aria-expanded="true" aria-controls="collapseUtilities">
                                 <i class="fas fa-fw fa-wrench"></i>
