--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -10,7 +10,7 @@
         <div class="card">
             <form action="" method="post">
                 <div class="card-header">
-                    <h6 style="color: blue">Form edit</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Form edit</h6>
                 </div>
 
                 <div class="card-body">
