revisi code done

--- a/views/purchases/form.ejs
+++ b/views/purchases/form.ejs
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col-md-4 py-3">
                         <label for="purchaseprice" class="form-label">Purchase Price</label>
-                        <input type="text" class="form-control" name="purchaseprice" id="purchaseprice">
+                        <input type="text" class="form-control" name="purchaseprice" id="purchaseprice" readonly>
                     </div>
                     <div class="col-md-4 py-3">
                         <label for="quantity" class="form-label">Qty</label>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="col-md-4 py-3">
                         <label for="ttotalprice" class="form-label">Total Price</label>
-                        <input type="text" class="form-control" name="totalprice" id="totalprice">
+                        <input type="text" class="form-control" name="totalprice" id="totalprice" readonly>
                     </div>
                     <div class="col-12">
                         <button type="submit" class="btn btn-primary btn-icon-split">
