--- a/views/sales/form.ejs
+++ b/views/sales/form.ejs
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col-md-4 py-3">
                         <label for="sellingprice" class="form-label">Selling Price</label>
-                        <input type="text" class="form-control" name="sellingprice" id="sellingprice">
+                        <input type="text" class="form-control" name="sellingprice" id="sellingprice" readonly>
                     </div>
                     <div class="col-md-4 py-3">
                         <label for="quantity" class="form-label">Qty</label>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="col-md-4 py-3">
                         <label for="ttotalprice" class="form-label">Total Price</label>
-                        <input type="text" class="form-control" name="totalprice" id="totalprice">
+                        <input type="text" class="form-control" name="totalprice" id="totalprice" readonly>
                     </div>
                     <div class="col-12">
                         <button type="submit" class="btn btn-primary btn-icon-split">
