repair css, routes: dashboards & index, views: dashboards list & register done

--- a/public/assets/css/sb-admin-2.css
+++ b/public/assets/css/sb-admin-2.css
@@ -10892,6 +10892,10 @@ form.user .form-control-user {
   padding: 1.5rem 1rem;
 }
 
+form.user .form-control-users {
+  border-radius: 10rem;
+}
+
 form.user .btn-user {
   font-size: 0.8rem;
   border-radius: 10rem;
