--- a/views/register.ejs
+++ b/views/register.ejs
@@ -52,7 +52,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Role :</label>
-                                    <select id="role" name="role" class="form-control" required>
+                                    <select id="role" name="role" class="form-control form-control-users" required>
                                         <option value="" disabled selected>-- Pilih Role --</option>
                                         <option>Operator</option>
                                         <option>Admin</option>
