repair code done

--- a/views/purchases/form.ejs
+++ b/views/purchases/form.ejs
@@ -74,22 +74,24 @@
             </div>
             <hr>
             <form action="" method="post">
-                <table id="detail-table" class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th>No.</th>
-                            <th>Barcode</th>
-                            <th>Name</th>
-                            <th>Qty</th>
-                            <th>Price</th>
-                            <th>Total Price</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
+                <div class="table-responsive">
+                    <table id="detail-table" class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>No.</th>
+                                <th>Barcode</th>
+                                <th>Name</th>
+                                <th>Qty</th>
+                                <th>Price</th>
+                                <th>Total Price</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
 
-                    </tbody>
-                </table>
+                        </tbody>
+                    </table>
+                </div>
 
                 <div class="card-footer">
 
