--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -32,7 +32,7 @@
 
                     <div class="mb-3 row">
                         <label class="col-sm-2 col-form-label">Role</label>
-                        <div class="col-sm-10">
+                        <div class="col-sm-10 mt-2">
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="role" id="operator" value="Operator"
                                     <%=data.role=='Operator' ? 'checked' : '' %>>
